Integrate resource management and enhance UI panels
Added FormularioRecurso and TablaRecursos components for resource management. Updated MainFrame to use real data panels for projects, tasks, users, and resources, and improved dashboard statistics with live data. Enhanced user feedback, validation, and error handling in all form dialogs. Refined UI labels, event handling, and connected all main panels to their respective database-backed components.